err/bgg.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bgg'...
Listing './lib/python3.5/site-packages/bgg/lib'...
Compiling './lib/python3.5/site-packages/bgg/lib/branches.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/branches.py", line 77
    print '-' * 79
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/cleanup.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/cleanup.py", line 30
    print "ERROR. No branch matched by search"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/commit.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/commit.py", line 52
    print "NOTE! There are untracked files:"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/getback.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/getback.py", line 12
    print "ERROR. You're already on the master branch."
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/makediff.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/makediff.py", line 61
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/merge.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/merge.py", line 35
    print "ERROR. Some still changed files"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/push.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/push.py", line 16
    print "ERROR! I don't dare force push to that!"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/rebase.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/rebase.py", line 29
    print utils.call("git checkout develop", and_print=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bgg/lib/start.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/start.py", line 47
    print "Your bugzilla cookie is now stored in",
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgg/lib/state.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/state.py", line 35
    print call('git status')
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bgg/lib/tags.py'...
***   File "./lib/python3.5/site-packages/bgg/lib/tags.py", line 10
    print "Switching to the master branch"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bgg-0.24.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
